# alisa

./: .gitignore  Cargo.toml  README.md  test.project
alisa/: Cargo.toml
alisa-proc-macros/: Cargo.toml
alisa-proc-macros/src/: lib.rs
alisa/examples/: slides.rs
alisa/examples/test/: ui.rs
alisa/examples/test/project/: folder.rs  mod.rs
alisa/src/: action.rs  lib.rs  project.rs  serialization.rs  server.rs  util.rs
alisa/src/client/: collab.rs  local.rs  mod.rs
alisa/src/client/collab/: mod.rs
alisa/src/object/: loading.rs  mod.rs  obj_kind.rs  obj_list.rs  ptr.rs
alisa/src/operation/: common.rs  mod.rs
alisa/src/operation/delta/: common.rs  mod.rs
alisa/src/serialization/: loading_ptr.rs  mod.rs  serialization_impls.rs
alisa/src/tree/: child_list.rs  creation.rs  mod.rs  transfer.rs
