[package]
name = "alisa"
version = "0.1.0"
edition = "2021"

[dependencies]
verter = "0.1.0"
rmpv = "1.3.0"
paste = "1.0.15"
concat_const = "0.1.3"
alisa-proc-macros = { path = "../alisa-proc-macros" }

[dev-dependencies]
pierro = {git = "https://github.com/cipollino-studio/pierro.git", rev = "3462b22"}